--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "browser-sync": "^2.18.13",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
