--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "browser-sync": "^2.18.13",
+    "gulp-clean": "^0.3.2",
+    "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
