--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "browser-sync": "^2.18.13",
-    "gulp-clean": "^0.3.2",
+    "gulp-csso": "^3.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
