--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "KIT website",
   "main": "index.js",
   "dependencies": {
-    "gulp": "^3.9.1"
+
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1",
     "gulp-csso": "^3.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-postcss": "^7.0.0",
