--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kit",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "KIT website",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "eslint": "eslint js/",
     "build": "gulp build",
